--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,13 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "./src/*"
+            ]
+        },
     },
     "ts-node": {
         "compilerOptions": {
