--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^7.2.6",
